--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx" class="no-js">
+
 <head>
 	<!-- Mobile Specific Meta -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,43 +16,44 @@
 	<meta charset="UTF-8">
 	<!-- Site Title -->
 	<title>Bakery</title>
+	<base href="/">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 
-	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
-		
-	</head>
-	<body>	
-		<header id="header" id="home">
-			<div class="header-top">
-				<div class="container">
-					<div class="row align-items-center">
-						<div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
+</head>
+
+<body>
+	<header id="header" id="home">
+		<div class="header-top">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-lg-6 col-sm-6 col-4 header-top-left no-padding">
 						<div class="menu-social-icons">
 							<a href="#"><i class="fa fa-facebook"></i></a>
 							<a href="#"><i class="fa fa-instagram"></i></a>
-						</div>	    				  					
 						</div>
-						<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
-							<a class="btns" href="tel:+953 012 3654 896">+953 012 3654 896</a>
-							<a class="btns" href="mailto:support@colorlib.com">support@colorlib.com</a>		
-							<a class="icons" href="tel:+953 012 3654 896">
-								<span class="lnr lnr-phone-handset"></span>
-							</a>
-							<a class="icons" href="mailto:support@colorlib.com">
-								<span class="lnr lnr-envelope"></span>
-							</a>		
-						</div>
-					</div>			  					
+					</div>
+					<div class="col-lg-6 col-sm-6 col-8 header-top-right no-padding">
+						<a class="btns" href="tel:+953 012 3654 896">+953 012 3654 896</a>
+						<a class="btns" href="mailto:support@colorlib.com">support@colorlib.com</a>
+						<a class="icons" href="tel:+953 012 3654 896">
+							<span class="lnr lnr-phone-handset"></span>
+						</a>
+						<a class="icons" href="mailto:support@colorlib.com">
+							<span class="lnr lnr-envelope"></span>
+						</a>
+					</div>
 				</div>
 			</div>
-			<div class="container main-menu">
-				<div class="row align-items-center justify-content-between d-flex">
-					<a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>		
-					<nav id="nav-menu-container">
-						<ul class="nav-menu">
-							<li class="menu-active"><a href="index.html">Inicio</a></li>
-							<li><a href="about.html">Sobre nosotros</a></li>
-							<li><a href="menu.html">Servicios</a></li>
-							<!--<li><a href="team.html">Team</a></li>
+		</div>
+		<div class="container main-menu">
+			<div class="row align-items-center justify-content-between d-flex">
+				<a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>
+				<nav id="nav-menu-container">
+					<ul class="nav-menu">
+						<li class="menu-active"><a href="index.html">Inicio</a></li>
+						<li><a href="about.html">Sobre nosotros</a></li>
+						<li><a href="menu.html">Servicios</a></li>
+						<!--<li><a href="team.html">Team</a></li>
 							<li class="menu-has-children"><a href="">Blog</a>
 							<ul>
 								<li><a href="blog-home.html">Blog Home</a></li>
@@ -65,15 +67,69 @@
 							</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>-->
-							<li><a href="contact.html">Contacto</a></li>
-						</ul>
-					</nav><!-- #nav-menu-container -->		
+						<li><a href="contact.html">Contacto</a></li>
+					</ul>
+				</nav><!-- #nav-menu-container -->
+			</div>
+		</div>
+	</header>
+	<!-- #header -->
+	<app-root></app-root>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	 crossorigin="anonymous"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+	<footer class="footer-area section-gap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-5 col-md-6 col-sm-6">
+					<div class="single-footer-widget">
+						<h6>About Us</h6>
+						<p>
+							If you own an Iphone, you’ve probably already worked out how much fun it is to use it to watch movies-it
+							has that.
+						</p>
+					</div>
+				</div>
+				<div class="col-lg-5  col-md-6 col-sm-6">
+					<div class="single-footer-widget">
+						<h6>Newsletter</h6>
+						<p>Stay update with our latest</p>
+						<div class="" id="mc_embed_signup">
+							<form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+							 method="get" class="form-inline">
+								<input class="form-control" name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'"
+								 required="" type="email">
+								<button class="click-btn"><i class="lnr lnr-arrow-right" aria-hidden="true"></i></button>
+								<div style="position: absolute; left: -5000px;">
+									<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+								</div>
+								<div class="info"></div>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-6 col-sm-6 social-widget">
+					<div class="single-footer-widget">
+						<h6>Follow Us</h6>
+						<p>Let us be social</p>
+						<div class="footer-social d-flex align-items-center">
+							<a href="#"><i class="fa fa-facebook"></i></a>
+							<a href="#"><i class="fa fa-instagram"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<p class="footer-text">
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						Copyright &copy;
+						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with
+						<i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					</p>
 				</div>
 			</div>
-		</header>
-		<!-- #header -->
-		<app-root></app-root>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
-	</body>
+		</div>
+	</footer>
+</body>
+
 </html>
