--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,12 @@
 		</div>
 		<div class="container main-menu">
 			<div class="row align-items-center justify-content-between d-flex">
-				<a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>
+				<a href="home"><img src="assets/img/logo.png" alt="" title="" /></a>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
-						<li class="menu-active"><a href="index.html">Inicio</a></li>
-						<li><a href="about.html">Sobre nosotros</a></li>
-						<li><a href="menu.html">Servicios</a></li>
+						<li class="menu-active"><a href="home">Inicio</a></li>
+						<li><a href="about">Sobre nosotros</a></li>
+						<li><a href="catalog">Servicios</a></li>
 						<!--<li><a href="team.html">Team</a></li>
 							<li class="menu-has-children"><a href="">Blog</a>
 							<ul>
@@ -67,7 +67,7 @@
 							</ul>
 							</li>
 							<li><a href="elements.html">Elements</a></li>-->
-						<li><a href="contact.html">Contacto</a></li>
+						<li><a href="contact">Contacto</a></li>
 					</ul>
 				</nav><!-- #nav-menu-container -->
 			</div>
